fix line spacing and arrow override styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -136,9 +136,6 @@ li:before {
 
   html {
       padding: 32px 0 96px;
-      -webkit-text-stroke: .34px black;
-      -moz-text-stroke: .34px black;
-      -text-stroke: .34px black;
   }
 
   svg:first-of-type {
@@ -152,13 +149,20 @@ li:before {
   h1, h2, h3, h4, h5, h6 {
     font-size: 32px;
   }
+
   p, ul, a {
     font-size: 20px;
+    line-height: 28px;
   }
+
   section:before {
     position: static;
     font-size: 14px;
     text-transform: uppercase;
+  }
+
+  .arrow {
+    display: none;
   }
 
 }
